--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.opencpu.org/opencpu-0.4.js"></script>
 <script src="https://stat.auckland.ac.nz/~fergusson/web_rmd/web_rmd.js"></script>
+<h1>Hello STATS220</h1>
 </head>
 <body style='margin:0'>
 <div id="output"></div>
